# NDK

./: CMakeLists.txt  README.md
c/: FirstHead.h  testHead.c
c/inoutput/: input.c
c/memorymanage/: memory.c
c/operator/: Math.c  complex.c
c/structure/: biteFiled.c  structure.c
c/union/: union.c
cplus/: first.cpp
cplus/array/: Array.cpp
cplus/date/: Date.cpp
cplus/field/: field.cpp
cplus/memory/: memory.cpp
cplus/point/: point.cpp
cplus/string/: String.cpp
cplus/struct/: extends.cpp  extends.h  struct.cpp
cplus/typedef/: typedef.cpp
day1/: FirstHead.c  enums.c  static.c
day1/array/: array.c
day1/point/: point.c
day1/string/: string.c
